--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["rd", "registration", "api"],
+  "keywords": [
+    "rd",
+    "registration",
+    "api"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^8.18.1",
     "multer": "^2.0.2"
